reqInfo修改