@@ -6,9 +6,8 @@ package com.jingyu.java.mytool.util;
 
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.Base64;
 import java.util.Random;
-
-import sun.misc.BASE64Encoder;
 
 public class TokenCreater {
 
@@ -26,8 +25,7 @@ public class TokenCreater {
         try {
             MessageDigest md = MessageDigest.getInstance("md5");
             byte md5[] = md.digest(token.getBytes());
-            BASE64Encoder encoder = new BASE64Encoder();
-            return encoder.encode(md5);
+            return Base64.getEncoder().encodeToString(md5);
         } catch (NoSuchAlgorithmException e) {
             throw new RuntimeException(e);
         }
